2005-06-18  Karl Runge <runge@karlrunge.com>
	* configure.ac: don't use -R on HP-UX and OSF1.
	* x11vnc: don't free the current cursor, close stderr
	  for -inetd -q and no -o logfile, set DISPLAY for -solid
	  external calls.

2005-06-14  Karl Runge <runge@karlrunge.com>
	* configure.ac: XReadScreen and XReadDisplay checks.
	* libvncserver/cursor.c: fix unsigned long crash for 64bits.
	* x11vnc: first round of beta-testing fixes, RFE's.

2005-06-10  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* configure.ac: fix that annoying SUN /usr/ccs location of "ar"

2005-06-03  Karl Runge <runge@karlrunge.com>
	* libvncserver/main.c: remove sraRgnSubtract from copyRegion
	* x11vnc: scrollcopyrect under -scale, add -fixscreen.

2005-05-30  Karl Runge <runge@karlrunge.com>
	* libvncserver/main.c: fix copyRect for non-cursor-shape-aware clients.

2005-05-24  Karl Runge <runge@karlrunge.com>
	* x11vnc: scrollcopyrect: GrabServer detection, autorepeat throttling..
	* prepare_x11vnc_dist.sh: grep out new libvncserver-config line.

2005-05-23  Karl Runge <runge@karlrunge.com>
	* configure.ac: malloc(0) is never used, so we don't need the check

2005-05-15  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* acinclude.m4: fix compilation for systems without socklen_t

2005-05-17  Karl Runge <runge@karlrunge.com>
	* x11vnc: more scrolling, -scr_term, -wait_ui, -nowait_bog

2005-05-15  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* almost every file: ANSIfy, fix warnings from Linus' sparse

2005-05-14  Karl Runge <runge@karlrunge.com>
	* x11vnc: more work on -scrollcopyrect and -xkb modes.

2005-05-13  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* libvncserver/{main,rfbserver,sockets}.c: fix memory leaks (valgrind)

2005-05-07  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* libvncserver/rfbserver.c: fix memory leak pointed out by Tim Jansen
	* libvncserver/{httpd,main,rfbserver,sockets}.c, rfb/rfb.h: